--- a/src/components/Dialogs/DialogItem/DialogItem.module.css
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.css
@@ -4,7 +4,20 @@
   font-size: 1.4rem;
   font-weight: 400;
   transition: 0.5s;
+  align-self: center;
 }
 .active {
   color: red;
+}
+.dialog {
+  /* background-color: rgb(64, 26, 98); */
+  margin-bottom: 1rem;
+  display: grid;
+  grid-template-columns: 6fr 6fr;
+}
+.img {
+  width: 5rem;
+  height: 5rem;
+  align-self: center;
+  border-radius: 50%;
 }
