--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -7,6 +7,8 @@
   text-align: center;
   font-weight: 400;
   background-color: transparent;
+  cursor: pointer;
+  border-radius: 3px;
 }
 .default:hover {
   background-color: rgb(48, 38, 54);
