--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,700;0,800;1,400&display=swap");
-
+@import "./scss/global.scss";
 body {
-  background-color: rgb(46, 46, 46);
+  background-color: $color-background;
   font-family: "Roboto";
   color: rgb(243, 243, 243);
 }
