--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
   padding: 1rem 0 0 1rem;
   cursor: pointer;
   transition: 0.3s;
-}
-.logo:hover {
-  opacity: 0.6;
+  &:hover {
+    opacity: 0.6;
+  }
 }
