--- a/src/components/Profile/Cover/Avatar/Avatar.module.scss
+++ b/src/components/Profile/Cover/Avatar/Avatar.module.scss
@@ -1,9 +1,9 @@
+// @import "./../../../../scss/global.scss";
 .avatar__wrapper {
   width: 11rem;
   height: 11rem;
   overflow: hidden;
   border-radius: 50%;
-  box-shadow: 1px 1px 7px #4800a7;
   justify-self: center;
   margin: 2.9rem 0;
 }
@@ -12,10 +12,4 @@
   width: auto;
   height: 100%;
   margin-left: -25%;
-}
-
-.info div {
-  font-size: 1.2rem;
-  margin: 1rem 0;
-  color: rgb(202, 202, 202);
 }
