--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,25 +1,27 @@
+@import "./../../../scss/global.scss";
 .default {
   padding: 8px 44px;
-  border: 1px solid #e9e9e9;
+  border: 1px solid $color-body;
   text-transform: uppercase;
   transition: all 0.5s;
-  color: #e9e9e9;
+  color: $color-body;
   text-align: center;
   font-weight: 400;
   background-color: transparent;
   cursor: pointer;
   border-radius: 3px;
+  &:hover {
+    background-color: rgb(48, 38, 54);
+    color: $color-primary;
+    border: 1px solid $color-primary;
+    &:disabled {
+      background-color: rgb(50, 48, 51);
+      color: #867795;
+      border: 1px solid #867795;
+    }
+  }
 }
-.default:hover {
-  background-color: rgb(48, 38, 54);
-  color: #b267f8;
-  border: 1px solid #b267f8;
-}
-.default:disabled {
-  background-color: rgb(50, 48, 51);
-  color: #867795;
-  border: 1px solid #867795;
-}
+
 .red {
   padding: 8px 44px;
   border: 1px solid #e24343;
@@ -29,9 +31,9 @@
   transition: all 0.15s;
   font-weight: 400;
   background-color: transparent;
-}
-.red:hover {
-  background-color: rgb(148, 46, 46);
-  color: #ff9393;
-  border: 1px solid #ff9393;
+  &:hover {
+    background-color: rgb(148, 46, 46);
+    color: #ff9393;
+    border: 1px solid #ff9393;
+  }
 }
