--- a/src/components/Dialogs/Message/AddMessage.module.scss
+++ b/src/components/Dialogs/Message/AddMessage.module.scss
@@ -9,6 +9,11 @@
   align-self: center;
 }
 .textArea {
-  color: $color-background;
-  font-size: 1.4rem;
+  color: $color-input;
+  font-size: 1.3rem;
+  background: $color-body;
+  outline: none;
+}
+.textArea:focus {
+  background: $color-input-focus;
 }
