--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,6 +5,8 @@ $color-body: rgb(243, 243, 243);
 $color-background: rgb(46, 46, 46);
 $color-text-hover: #b668ff;
 $color-red: #e24343;
+$color-input-focus: #eedbff;
+$color-input: #3d3544;
 
 // spacing
 $base-spacing: 20px;
