--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -1,4 +1,7 @@
 @import "./../../scss//global.scss";
+// * {
+//   border: 1px solid red;
+// }
 .mainWrapper {
   margin-bottom: 4rem;
 }
@@ -37,7 +40,7 @@
   height: 6rem;
   margin-bottom: 10px;
   margin-top: 2rem;
-  margin-left: 7%;
+  margin-left: 14%;
 }
 .btn {
   // padding: 8px 34px;
@@ -45,6 +48,16 @@
   text-align: center;
   padding: 7px 15px;
 }
-hr {
-  width: 100%;
+
+.selectedPage {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+.pageButtons {
+  cursor: pointer;
+  font-size: 1.3rem;
+  span {
+    margin-right: 7px;
+    opacity: 0.9;
+  }
 }
