--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -50,8 +50,9 @@
 }
 
 .selectedPage {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 1.5rem;
+  color: $color-text-hover;
 }
 .pageButtons {
   cursor: pointer;
