--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -3,7 +3,7 @@ $color-primary: #a042f1;
 $color-yellow: #e5df88;
 $color-body: rgb(243, 243, 243);
 $color-background: rgb(46, 46, 46);
-$color-text-hover: #b668ff;
+$color-text-hover: #ca94fd;
 $color-red: #e24343;
 $color-input-focus: #eedbff;
 $color-input: #3d3544;
