--- a/src/components/Profile/Cover/Cover.module.scss
+++ b/src/components/Profile/Cover/Cover.module.scss
@@ -3,13 +3,13 @@
 .wrapper {
   display: grid;
   grid-template-columns: 20% 80%;
-  background: linear-gradient(
-    90deg,
-    rgba(60, 34, 78, 1) 0%,
-    rgba(93, 53, 130, 1) 48%,
-    rgba(145, 85, 198, 1) 100%
-  );
-  // background-image: url("https://images.unsplash.com/photo-1557682250-33bd709cbe85?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1015&q=80");
+  // background: linear-gradient(
+  //   90deg,
+  //   rgba(60, 34, 78, 1) 0%,
+  //   rgba(93, 53, 130, 1) 48%,
+  //   rgba(145, 85, 198, 1) 100%
+  // );
+  background-image: url("https://images.unsplash.com/photo-1557682250-33bd709cbe85?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1015&q=80");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 100% 100%;
