--- a/src/components/Profile/Cover/Info/Info.module.scss
+++ b/src/components/Profile/Cover/Info/Info.module.scss
@@ -4,9 +4,12 @@
     font-size: 1.2rem;
     margin: 1rem 0;
     color: rgb(196, 171, 211);
-
     line-height: 1.3rem;
     font-weight: 300;
+  }
+  h3 {
+    font-weight: 500;
+    font-size: 1.3rem;
   }
   .span {
     color: $color-body;
