--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,17 +3,35 @@
   grid-area: header;
   display: flex;
   justify-content: space-between;
+  grid-auto-rows: minmax(30px, 200px);
+  max-width: 90%;
+  margin: 0 auto;
+
   .logo {
-    padding: 1rem 0 0 1rem;
+    align-self: center;
+
     cursor: pointer;
     transition: 0.3s;
+    height: 3rem;
+    width: 3rem;
     &:hover {
       opacity: 0.6;
     }
   }
   .authWrapper {
+    display: flex;
+    flex-direction: column;
+
     a {
       color: $color-body;
     }
+  }
+  .avatar {
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0.7rem 0 0 0;
+  }
+  .login {
+    font-size: 1.2rem;
   }
 }
