--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,7 +1,8 @@
 @import "./../../scss/global.scss";
 .nav {
-  grid-area: nav;
-  padding: 1rem 0 0 1rem;
+  // grid-area: nav;
+  // padding: 1rem 0 0 1rem;
+  width: 10%;
   a {
     line-height: 2.7rem;
     color: $color-body;
@@ -9,6 +10,7 @@
     font-size: 1.7rem;
     font-weight: 400;
     transition: 0.5s;
+
     &:hover {
       color: $color-text-hover;
     }
