Add editable status

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,7 +7,7 @@ $color-text-hover: #ca94fd;
 $color-red: #e24343;
 $color-input-focus: #eedbff;
 $color-input: #3d3544;
-
+$color-info: rgb(196, 171, 211);
 // spacing
 $base-spacing: 20px;
 $half-spacing: $base-spacing/2;
