--- a/src/components/Profile/Cover/Info/Info.module.scss
+++ b/src/components/Profile/Cover/Info/Info.module.scss
@@ -3,7 +3,7 @@
   .headers {
     font-size: 1.2rem;
     margin: 1rem 0;
-    color: rgb(196, 171, 211);
+    color: $color-info;
     line-height: 1.3rem;
     font-weight: 300;
   }
