--- a/src/components/Profile/ProfileStatus/ProfileStatus.module.scss
+++ b/src/components/Profile/ProfileStatus/ProfileStatus.module.scss
@@ -3,6 +3,7 @@
 .status {
   font-size: 1.2rem;
   margin: 1rem 0;
+  margin-left: 2rem;
   color: $color-info;
   line-height: 1.3rem;
   font-weight: 300;
