--- a/src/components/Profile/Cover/Info/Info.module.scss
+++ b/src/components/Profile/Cover/Info/Info.module.scss
@@ -1,9 +1,10 @@
 @import "./../../../../scss/global.scss";
 .info {
-  max-width: 25rem;
+  // max-width: 35rem;
   .headers {
     font-size: 1.2rem;
     margin: 1rem 0;
+    margin-left: 2rem;
     color: $color-info;
     line-height: 1.3rem;
     font-weight: 300;
@@ -11,6 +12,7 @@
   h3 {
     font-weight: 500;
     font-size: 1.3rem;
+    margin-left: 2rem;
   }
   .span {
     color: $color-body;
