--- a/src/components/Dialogs/Dialogs.module.scss
+++ b/src/components/Dialogs/Dialogs.module.scss
@@ -12,7 +12,7 @@
 }
 .btn {
   display: block;
-  margin: 0;
+  margin-top: 0.5rem;
   align-self: center;
 }
 .textArea {
@@ -26,4 +26,5 @@
 }
 .wrapperAddArea {
   margin-left: 12px;
+  width: 25rem;
 }
