--- a/src/components/Profile/Cover/Info/Info.module.scss
+++ b/src/components/Profile/Cover/Info/Info.module.scss
@@ -3,7 +3,7 @@
   // max-width: 35rem;
   .headers {
     font-size: 1.2rem;
-    margin: 1rem 0;
+    margin: 1rem 2rem;
     margin-left: 2rem;
     color: $color-info;
     line-height: 1.3rem;
@@ -13,6 +13,7 @@
     font-weight: 500;
     font-size: 1.3rem;
     margin-left: 2rem;
+    color: $color-info;
   }
   .span {
     color: $color-body;
