--- a/src/components/Profile/MyPosts/MyPosts.module.scss
+++ b/src/components/Profile/MyPosts/MyPosts.module.scss
@@ -7,12 +7,11 @@
   font-size: 1rem;
   display: block;
 }
-.textArea {
-  color: $color-input;
-  font-size: 1.3rem;
-  background: $color-body;
-  outline: none;
+
+.btn {
+  display: block;
+  margin-top: 0.5rem;
 }
-.textArea:focus {
-  background: $color-input-focus;
+.form {
+  width: 25rem;
 }
