--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -9,6 +9,7 @@
   background: transparent;
   padding: 0 4px;
   opacity: 0.8;
+  margin-left: 2rem;
 }
 
 .errorInput {
@@ -25,4 +26,19 @@
   font-weight: 400;
   font-size: 1rem;
   text-transform: uppercase;
+}
+.input {
+  height: 2rem;
+  font-size: 1.1rem;
+  outline: none;
+  border: none;
+  border-bottom: 1.9px solid $color-body;
+  border: 1px solid $color-body;
+  background: transparent;
+  padding: 0 4px;
+  opacity: 0.8;
+  display: block;
+  &:focus {
+    background: $color-input-focus;
+  }
 }
