--- a/src/components/Dialogs/DialogItem/DialogItem.module.scss
+++ b/src/components/Dialogs/DialogItem/DialogItem.module.scss
@@ -7,6 +7,8 @@
     color: $color-body;
     text-decoration: none;
     align-self: center;
+    font-size: 1.4rem;
+    font-weight: 300;
   }
 }
 .img {
