--- a/src/components/Profile/MyPosts/MyPosts.module.scss
+++ b/src/components/Profile/MyPosts/MyPosts.module.scss
@@ -1,8 +1,5 @@
 @import "./../../../scss/global.scss";
-.header {
-  font-weight: 400;
-  font-size: 1.3rem;
-}
+
 .addPostBtn {
   font-size: 1rem;
   display: block;
@@ -10,7 +7,7 @@
 
 .btn {
   display: block;
-  margin-top: 0.5rem;
+  margin-top: 5px;
 }
 .form {
   width: 25rem;
