--- a/src/components/Dialogs/Message/Message/Message.module.scss
+++ b/src/components/Dialogs/Message/Message/Message.module.scss
@@ -1,6 +1,16 @@
 @import "./../../../../scss/global.scss";
 
-.message {
-  font-size: 1.3rem;
-  color: $color-body;
+.messageWrapper {
+  width: 20rem;
+  background-color: rgb(51, 51, 51);
+  height: auto;
+  padding: 15px;
+  margin-bottom: 1rem;
+  border-radius: 7px;
+  .message {
+    font-size: 1.3rem;
+    color: $color-body;
+    opacity: 0.8;
+    margin: 0;
+  }
 }
