--- a/src/components/Profile/MyPosts/Post/Post.module.scss
+++ b/src/components/Profile/MyPosts/Post/Post.module.scss
@@ -1,7 +1,23 @@
 @import "./../../../../scss/global.scss";
 
-.item {
-  color: $color-yellow;
-  opacity: 0.9;
-  font-size: 1.3rem;
+.post {
+  max-width: 38rem;
+  height: auto;
+  background-color: rgb(51, 51, 51);
+  padding: 0.5rem 1rem;
+  border-radius: 7px;
+  margin-bottom: 1rem;
+  @include media-query("max", $palm-start) {
+    max-width: 28rem;
+  }
+  .item {
+    color: $color-yellow;
+    opacity: 0.9;
+    font-size: 1.4rem;
+    font-weight: 300;
+    font-style: italic;
+    line-height: 1.4rem;
+  }
+  .likes {
+  }
 }
