--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,6 +1,6 @@
 // Theme Colours
 $color-primary: #a042f1;
-$color-yellow: #e5df88;
+$color-yellow: #b0efeb;
 $color-body: rgb(240, 238, 238);
 $color-background: rgb(46, 46, 46);
 $color-text-hover: #ca94fd;
