--- a/src/components/Profile/Cover/Cover.module.scss
+++ b/src/components/Profile/Cover/Cover.module.scss
@@ -6,6 +6,8 @@
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-radius: 7px;
+  padding: 0.3rem;
+  margin-bottom: 3rem;
 }
 .wrapper {
   display: flex;
@@ -23,6 +25,7 @@
   justify-self: center;
   justify-content: space-between;
   margin-left: 2rem;
+  padding-top: 2rem;
   @include media-query("max", $palm-start) {
     width: 5rem;
     height: 5rem;
