--- a/src/components/Profile/Cover/Info/Info.module.scss
+++ b/src/components/Profile/Cover/Info/Info.module.scss
@@ -3,7 +3,7 @@
   // max-width: 35rem;
   .headers {
     font-size: 1.2rem;
-    margin: 1rem 2rem;
+    margin: 0 2rem;
     margin-left: 2rem;
     color: $color-info;
     line-height: 1.3rem;
@@ -11,7 +11,7 @@
   }
   h3 {
     font-weight: 500;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     margin-left: 2rem;
     color: $color-info;
   }
