--- a/src/components/Profile/MyPosts/Post/Post.module.scss
+++ b/src/components/Profile/MyPosts/Post/Post.module.scss
@@ -11,8 +11,8 @@
     max-width: 28rem;
   }
   .item {
-    color: $color-yellow;
-    opacity: 0.9;
+    color: $color-body;
+    opacity: 0.6;
     font-size: 1.4rem;
     font-weight: 300;
     font-style: italic;
