Add some styles

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,7 @@
   grid-auto-rows: minmax(30px, 200px);
   max-width: 90%;
   margin: 0 auto;
-  padding: 1rem;
+  padding-bottom: 5px;
   .logo {
     align-self: center;
     cursor: pointer;
