--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,7 +5,7 @@ $color-body: rgb(240, 238, 238);
 $color-background: rgb(46, 46, 46);
 $color-text-hover: #ca94fd;
 $color-red: #e24343;
-$color-input-focus: #eedbff;
+$color-input-focus: #eedbff9d;
 $color-input: #3d3544;
 $color-info: rgb(196, 171, 211);
 // spacing
