--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,11 @@
 @import "./../../scss/global.scss";
 .header {
-  grid-area: header;
   display: flex;
   justify-content: space-between;
   grid-auto-rows: minmax(30px, 200px);
-  max-width: 90%;
+  max-width: 100%;
   margin: 0 auto;
+  padding: 0 5%;
   padding-bottom: 5px;
   .logo {
     align-self: center;
@@ -32,9 +32,13 @@
   }
   .login {
     font-size: 1.2rem;
+    color: $color-body;
+    opacity: 0.7;
   }
   .logout {
     cursor: pointer;
+    opacity: 0.7;
     text-decoration: underline;
+    color: $color-body;
   }
 }
