--- a/src/components/Users/Users.module.scss
+++ b/src/components/Users/Users.module.scss
@@ -6,7 +6,7 @@
 }
 .wrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   width: 40%;
 }
 .usersContainer {
@@ -23,19 +23,18 @@
 }
 .infoWrapper {
   margin-left: 0.7rem;
-  margin-top: 2.5rem;
+  margin-top: 0.5rem;
 }
 .name {
   font-size: 1.4rem;
   font-weight: 400;
   color: $color-yellow;
   opacity: 0.9;
-  margin-top: 0;
 }
 .status {
   opacity: 0.8;
   font-size: 1.3rem;
-  margin: 0;
+  margin-top: -1rem;
   font-style: italic;
   font-weight: 300;
 }
