--- a/src/components/Profile/Cover/Info/Info.module.scss
+++ b/src/components/Profile/Cover/Info/Info.module.scss
@@ -9,7 +9,7 @@
     line-height: 1.3rem;
     font-weight: 300;
   }
-  h3 {
+  .name {
     font-weight: 500;
     font-size: 1.4rem;
     margin-left: 2rem;
