--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400&display=swap");
-
 @import "./scss/global.scss";
 body {
   background-color: $color-background;
@@ -9,13 +8,18 @@ body {
 }
 
 .mainWrapper {
-  display: flex;
-  width: 100%;
-  padding: 0 5%;
-  margin: 0 auto;
-  flex-wrap: wrap;
+  padding: 0 3%;
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  @include media-query("max", $lap-start) {
+    display: flex;
+    flex-direction: column;
+    padding: 0 5%;
+  }
 }
-.content {
-  width: 80%;
-  // margin: 0 2rem;
-}
+// .content {
+// width: 80%;
+// margin: 0 2rem;
+// }
