--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -8,7 +8,6 @@
   margin: 0 auto;
 
   h1 {
-    margin: 0;
     text-align: center;
     font-size: 2.5rem;
   }
@@ -29,5 +28,11 @@
     text-align: center;
     margin-top: 5px;
     color: $color-text-hover;
+  }
+  span {
+    font-size: 1.4rem;
+  }
+  .form {
+    margin-top: 1rem;
   }
 }
