Add ability to uopload photo

--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -9,6 +9,7 @@
     font-size: 1.7rem;
     font-weight: 400;
     transition: 0.5s;
+    cursor: pointer;
 
     &:hover {
       color: $color-text-hover;
